--- a/acercaDe/acercaDe.html
+++ b/acercaDe/acercaDe.html
@@ -73,7 +73,9 @@
             sequi molestias ullam et omnis illum facilis eius ea delectus, culpa nisi suscipit!</p>
         </div>
         <div class="col-lg-6 col-md-12 col-xs-12">
-          <img src="/assets/aboutus.jpg" alt="nuestro manifiesto" class="img-fluid w-85 h-85 img-aboutUs">
+          <div class="image-container-aspect">
+            <img src="/assets/aboutus.jpg" alt="nuestro manifiesto" class="img-fluid img-aboutUs">
+          </div>
         </div>
       </div>
     </div>
@@ -84,7 +86,9 @@
     <div class="container mt-5">
       <div class="row justify-content-between gx-5">
         <div class="col-lg-6 col-md-12 col-xs-12">
-          <img src="/assets/ourstory.jpg" alt="nuestra historia" class="img-fluid w-85 h-85 img-aboutUs">
+          <div class="image-container-aspect">
+            <img src="/assets/ourstory.jpg" alt="nuestra historia" class="img-fluid img-aboutUs">
+          </div>
         </div>
         <div class="col-lg-6 col-md-12 col-xs-12">
           <h2 class="our">Nuestra</h2>
@@ -137,10 +141,89 @@
       </div>
     </div>
   </div>
-
-
-
-
+  <!--Sección de equipo-->
+  <section>
+    <h2 class="aboutUs-team">Acerca del equipo de desarrollo</h2>
+    <section>
+      <div class="container">
+        <div class="row justify-content-between gx-5">
+          <div class="col-lg-4 col-md-12 col-xs-12 text-center">
+            <div class="image-container-team">
+              <img src="/assets/alan.jpg" alt="Alan">
+            </div>
+            <h3 class="names-team">Alan Bañuelos</h3>
+            <p class="description-team">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, magnam
+              odit minima pariatur hic maxime. Laudantium magnam facilis ratione possimus dolor, minus, sed id accusamus
+              repellendus, fugiat distinctio architecto. Impedit?</p>
+          </div>
+          <div class="col-lg-4 col-md-12 col-xs-12 text-center">
+            <div class="image-container-team">
+              <img src="/assets/karim.jpg" alt="Karim">
+            </div>
+            <h3 class="names-team">Alan Rangel</h3>
+            <p class="description-team">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias voluptatem
+              quisquam aut. Distinctio mollitia consequatur suscipit temporibus explicabo, earum, aspernatur quidem,
+              molestias ratione enim maxime! Suscipit nisi vitae ex porro!</p>
+          </div>
+          <div class="col-lg-4 col-md-12 col-xs-12 text-center">
+            <div class="image-container-team">
+              <img src="/assets/betza.jpg" alt="Betzabet">
+            </div>
+            <h3 class="names-team">Betzabet Mera</h3>
+            <p class="description-team">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem
+              necessitatibus quos, error totam eum repellendus corporis consequuntur placeat ullam maiores nobis,
+              voluptatibus odio earum vel! Amet ipsa praesentium maiores illum!</p>
+          </div>
+        </div>
+      </div>
+      <!--segunda parte-->
+      <div class="container mt-5">
+        <div class="row justify-content-between gx-5">
+          <div class="col-lg-4 col-md-12 col-xs-12 text-center">
+            <div class="image-container-team">
+              <img src="/assets/raul.jpg" alt="Raúl">
+            </div>
+            <h3 class="names-team">Raúl Maldonado</h3>
+            <p class="description-team">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa commodi sunt
+              harum expedita incidunt magni ea. Illo nihil minima adipisci possimus numquam quam sint maiores officia
+              voluptate, fugit non accusantium.</p>
+          </div>
+          <div class="col-lg-4 col-md-12 col-xs-12 text-center">
+            <div class="image-container-team">
+              <img src="/assets/ricardo (1).jpg" alt="Ricardo">
+            </div>
+            <h3 class="names-team">Ricardo González</h3>
+            <p class="description-team">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet nemo fugit
+              dolor soluta eum dignissimos, ea reprehenderit sunt quos esse dolorum excepturi pariatur ut qui ratione
+              porro et perspiciatis laborum?</p>
+          </div>
+          <div class="col-lg-4 col-md-12 col-xs-12 text-center">
+            <div class="image-container-team">
+              <img src="/assets/sergio (1).jpg" alt="Sergio">
+            </div>
+            <h3 class="names-team">Sergio Morales</h3>
+            <p class="description-team">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt natus ipsa,
+              consequuntur deserunt optio labore officia sapiente ut assumenda id, recusandae odit quod rerum alias non
+              molestias culpa, fugiat voluptates.</p>
+          </div>
+        </div>
+      </div>
+      <!--última parte-->
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-4 col-md-12 col-xs-12 text-center">
+            <div class="image-container-team">
+              <img src="/assets/viviano (1).jpg" alt="Viviano">
+            </div>
+            <h3 class="names-team">Viviano Pérez</h3>
+            <p class="description-team">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea sit omnis quis velit
+              ex sed dolorem voluptatem fuga asperiores veniam quidem tenetur architecto praesentium, neque laudantium
+              aperiam expedita nam consectetur?</p>
+          </div>
+        </div>
+      </div>
+    </section>
+  </section>
   <footer>
 
   </footer>
