--- a/acercaDe/acercaDe.html
+++ b/acercaDe/acercaDe.html
@@ -184,7 +184,8 @@
               <img src="/assets/raul.jpg" alt="Raúl">
             </div>
             <h3 class="names-team">Raúl Maldonado</h3>
-            <p class="description-team">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa commodi sunt
+            <p class="description-team">Hola, soy Raúl, Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa
+              commodi sunt
               harum expedita incidunt magni ea. Illo nihil minima adipisci possimus numquam quam sint maiores officia
               voluptate, fugit non accusantium.</p>
           </div>
