💄 Agregué cambios al diseño de Espresso Café

--- a/acercaDe/acercaDe.html
+++ b/acercaDe/acercaDe.html
@@ -216,9 +216,11 @@
               <img src="/assets/viviano (1).jpg" alt="Viviano">
             </div>
             <h3 class="names-team">Viviano Pérez</h3>
-            <p class="description-team">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea sit omnis quis velit
-              ex sed dolorem voluptatem fuga asperiores veniam quidem tenetur architecto praesentium, neque laudantium
-              aperiam expedita nam consectetur?</p>
+            <p class="description-team">Viviano Alonso Pérez Romero es Ingeniero en Electrónica y Telecomunicaciones egresado de la Universidad Politécnica del Centro en Villahermosa, Tabasco. Cuenta con más de 6 años de experiencia en infraestructura y administración de redes, voz y datos, trabajando en empresas del sector privado y público.
+
+Su labor se enfoca en la implementación y gestión de equipos de red y soluciones de ciberseguridad, aportando en proyectos clave para ambas industrias. Ha participado activamente en levantamientos, consultoría, proyección de costos de infraestructura y desarrollo de estrategias de seguridad informática.
+
+Recientemente, culminó su Maestría en Tecnologías de la Información con especialidad en Administración de Telecomunicaciones en el Instituto Tecnológico Nacional de México, campus Villahermosa. Entre sus logros profesionales destaca su participación en proyectos relevantes, incluyendo congresos internacionales como “Shallow and Deepwater México”</p>
           </div>
         </div>
       </div>
