--- a/pages/acercaDe.html
+++ b/pages/acercaDe.html
@@ -12,6 +12,7 @@
     integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
   <!--Navbar-->
   <header>
@@ -188,7 +189,8 @@
 
             <h3 class="names-team mt-5">Raúl Maldonado</h3>
             <p class="description-team">Hola, soy Raúl, Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa
-              commodi suntharum expedita incidunt magni ea. Illo nihil minima adipisci possimus numquam quam sint maiores officia
+              commodi suntharum expedita incidunt magni ea. Illo nihil minima adipisci possimus numquam quam sint
+              maiores officia
               voluptate, fugit non accusantium.</p>
           </div>
           <div class="col-lg-4 col-md-12 col-xs-12 text-center">
