añadi mi imagen y mi descripcion

--- a/pages/acercaDe.html
+++ b/pages/acercaDe.html
@@ -202,12 +202,12 @@
           </div>
           <div class="col-lg-4 col-md-12 col-xs-12 text-center">
             <div class="image-container-team">
-              <img src="/assets/sergio (1).jpg" alt="Sergio">
+              <img src="/assets/Sergio.jpeg" alt="Sergio">
             </div>
             <h3 class="names-team mt-5">Sergio Morales</h3>
-            <p class="description-team">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt natus ipsa,
-              consequuntur deserunt optio labore officia sapiente ut assumenda id, recusandae odit quod rerum alias non
-              molestias culpa, fugiat voluptates.</p>
+            <p class="description-team">Soy Desarrollador jr especializado en Java con experiencia práctica en el desarrollo de aplicaciones usando Spring Boot, HTML, CSS, MySQL y
+ metodologías ágiles. Con más de 10 años de trayectoria en atención al cliente, roles administrativos y liderazgo de equipos, destaco por mi capacidad
+ para adaptarme rápidamente, comunicarme de forma efectiva y entregar resultados en entornos exigentes.</p>
           </div>
         </div>
       </div>
