--- a/pages/acercaDe.html
+++ b/pages/acercaDe.html
@@ -170,12 +170,10 @@
           </div>
           <div class="col-lg-4 col-md-12 col-xs-12 text-center">
             <div class="image-container-team">
-              <img src="/assets/betza.jpg" alt="Betzabet">
+              <img src="/assets/betza.jpeg" alt="Betzabet">
             </div>
             <h3 class="names-team mt-5">Betzabet Mera</h3>
-            <p class="description-team">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem
-              necessitatibus quos, error totam eum repellendus corporis consequuntur placeat ullam maiores nobis,
-              voluptatibus odio earum vel! Amet ipsa praesentium maiores illum!</p>
+            <p class="description-team">Hola,soy Desarrolladora Full Stack con formación en Ingeniería Biomédica. Mi formación en biomédica ha fortalecido mi capacidad para abordar problemas complejos con metodología y precisión, habilidades que aplico transversalmente al desarrollo de software. Con una mentalidad de crecimiento constante, estoy comprometida con expandir mi expertise en diversoso ámbitos tecnológicos. Mi enfoque combina rigor técnico con adpatabilidad para dominar nuevos paradigmas y stacks tecnológicos según las demandas del proyecto.</p>
           </div>
         </div>
       </div>
