--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-Sergio Morales
-Hola a todos - Raul
-Alan B
-Betzabet.
-Alan B.
-Buenos días
-hola soy ricardo
-Karim Rangel, este cambio es para dar check a mi rama 
-Buenos días
-Buenos días
-Esta es otra modificación para probar el merge
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <a href="pages/acercaDe.html">Nosotros</a>
+</body>
+</html>
 
