--- a/pages/acercaDe.html
+++ b/pages/acercaDe.html
@@ -155,9 +155,13 @@
               <img src="/assets/alan.jpg" alt="Alan">
             </div>
             <h3 class="names-team mt-5">Alan Bañuelos</h3>
-            <p class="description-team">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, magnam
-              odit minima pariatur hic maxime. Laudantium magnam facilis ratione possimus dolor, minus, sed id accusamus
-              repellendus, fugiat distinctio architecto. Impedit?</p>
+            <p class="description-team">
+              Soy alguien orientado al logro, de pensamiento crítico y analítico. Me gusta aprender de todo y ser proactivo en mis actividades para mejorar mis resultados y habilidades.
+              Busco continuar desarrollando mis habilidades al incorporarme a roles dedicados al desarrollo web o análisis de datos, y refinar mi manejo de software dedicado como SQL, Python y Power BI, ya que la gestión de información es una habilidad versátil e imprescindible en la toma de decisiones de muchos campos.
+              Adicionalmente, actualmente me estoy desarrollando en un rol de desarrollador Java Fullstack.
+              https://github.com/AlanBWolfs
+              https://www.linkedin.com/in/alan-bañuelos-gonzález-b65906257/
+              alan_blk@live.com </p>
           </div>
           <div class="col-lg-4 col-md-12 col-xs-12 text-center">
             <div class="image-container-team">
