Updated Karim's information

--- a/pages/acercaDe.html
+++ b/pages/acercaDe.html
@@ -156,8 +156,11 @@
             </div>
             <h3 class="names-team mt-5">Alan Bañuelos</h3>
             <p class="description-team">
-              Soy alguien orientado al logro, de pensamiento crítico y analítico. Me gusta aprender de todo y ser proactivo en mis actividades para mejorar mis resultados y habilidades.
-              Busco continuar desarrollando mis habilidades al incorporarme a roles dedicados al desarrollo web o análisis de datos, y refinar mi manejo de software dedicado como SQL, Python y Power BI, ya que la gestión de información es una habilidad versátil e imprescindible en la toma de decisiones de muchos campos.
+              Soy alguien orientado al logro, de pensamiento crítico y analítico. Me gusta aprender de todo y ser
+              proactivo en mis actividades para mejorar mis resultados y habilidades.
+              Busco continuar desarrollando mis habilidades al incorporarme a roles dedicados al desarrollo web o
+              análisis de datos, y refinar mi manejo de software dedicado como SQL, Python y Power BI, ya que la gestión
+              de información es una habilidad versátil e imprescindible en la toma de decisiones de muchos campos.
               Adicionalmente, actualmente me estoy desarrollando en un rol de desarrollador Java Fullstack.
               https://github.com/AlanBWolfs
               https://www.linkedin.com/in/alan-bañuelos-gonzález-b65906257/
@@ -165,17 +168,31 @@
           </div>
           <div class="col-lg-4 col-md-12 col-xs-12 text-center">
             <div class="image-container-team">
-              <img src="/assets/AKRC.jpg" alt="Karim">
+              <img src="/assets/AKRC.jpg" alt="AKRC">
             </div>
             <h3 class="names-team mt-5">Karim Rangel</h3>
-            <p class="description-team">Un tipazo</p>
+            <p class="description-team">Soy desarrollador Fullstack Jr con formación en Ciencias de la Computación y
+              experiencia en desarrollo de software
+              orientado a objetos. Apasionado por crear soluciones robustas tanto en frontend como backend, utilizando
+              tecnologías
+              como Java, Spring Boot, MySQL, HTML, Bootstrap, CSS y JavaScript con React. Tengo habilidades sólidas en
+              análisis de
+              requerimientos, diseño de sistemas, pruebas y despliegue. Excelente capacidad para trabajar en equipo,
+              resolver
+              problemas y adaptarse a entornos ágiles.</p>
           </div>
           <div class="col-lg-4 col-md-12 col-xs-12 text-center">
             <div class="image-container-team">
               <img src="/assets/betza.jpeg" alt="Betzabet">
             </div>
             <h3 class="names-team mt-5">Betzabet Mera</h3>
-            <p class="description-team">Hola,soy Desarrolladora Full Stack con formación en Ingeniería Biomédica. Mi formación en biomédica ha fortalecido mi capacidad para abordar problemas complejos con metodología y precisión, habilidades que aplico transversalmente al desarrollo de software. Con una mentalidad de crecimiento constante, estoy comprometida con expandir mi expertise en diversoso ámbitos tecnológicos. Mi enfoque combina rigor técnico con adpatabilidad para dominar nuevos paradigmas y stacks tecnológicos según las demandas del proyecto.</p>
+            <p class="description-team">Hola,soy Desarrolladora Full Stack con formación en
+              Ingeniería Biomédica. Mi
+              formación en biomédica ha fortalecido mi capacidad para abordar problemas complejos con metodología y
+              precisión, habilidades que aplico transversalmente al desarrollo de software. Con una mentalidad de
+              crecimiento constante, estoy comprometida con expandir mi expertise en diversoso ámbitos tecnológicos. Mi
+              enfoque combina rigor técnico con adpatabilidad para dominar nuevos paradigmas y stacks tecnológicos según
+              las demandas del proyecto.</p>
           </div>
         </div>
       </div>
@@ -207,9 +224,11 @@
               <img src="/assets/Sergio.jpeg" alt="Sergio">
             </div>
             <h3 class="names-team mt-5">Sergio Morales</h3>
-            <p class="description-team">Soy Desarrollador jr especializado en Java con experiencia práctica en el desarrollo de aplicaciones usando Spring Boot, HTML, CSS, MySQL y
- metodologías ágiles. Con más de 10 años de trayectoria en atención al cliente, roles administrativos y liderazgo de equipos, destaco por mi capacidad
- para adaptarme rápidamente, comunicarme de forma efectiva y entregar resultados en entornos exigentes.</p>
+            <p class="description-team">Soy Desarrollador jr especializado en Java con experiencia práctica en el
+              desarrollo de aplicaciones usando Spring Boot, HTML, CSS, MySQL y
+              metodologías ágiles. Con más de 10 años de trayectoria en atención al cliente, roles administrativos y
+              liderazgo de equipos, destaco por mi capacidad
+              para adaptarme rápidamente, comunicarme de forma efectiva y entregar resultados en entornos exigentes.</p>
           </div>
         </div>
       </div>
