Cambio de foto ricardo y perfil

--- a/pages/acercaDe.html
+++ b/pages/acercaDe.html
@@ -191,12 +191,11 @@
           </div>
           <div class="col-lg-4 col-md-12 col-xs-12 text-center">
             <div class="image-container-team">
-              <img src="/assets/ricardo (1).jpg" alt="Ricardo">
+              <img src="/assets/ricardo.jpeg" alt="Ricardo">
             </div>
             <h3 class="names-team mt-5">Ricardo González</h3>
-            <p class="description-team">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet nemo fugit
-              dolor soluta eum dignissimos, ea reprehenderit sunt quos esse dolorum excepturi pariatur ut qui ratione
-              porro et perspiciatis laborum?</p>
+            <p class="description-team">Desarrollador Full Stack con formación en ingeniería, lo que me permite abordar proyectos de manera integral, trabajar en equipo de forma colaborativa y orientarme al cumplimiento de objetivos y metas en tiempos establecidos. He participado en diversos entornos de formación donde desarrollé proyectos tecnológicos, aplicando tanto habilidades técnicas como blandas. 
+</p>
           </div>
           <div class="col-lg-4 col-md-12 col-xs-12 text-center">
             <div class="image-container-team">
