--- a/pages/acercaDe.html
+++ b/pages/acercaDe.html
@@ -205,7 +205,8 @@
             </div>
 
             <h3 class="names-team mt-5">Raúl Maldonado</h3>
-            <p class="description-team">Hola, soy Raúl, Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa
+            <p class="description-team">Hola, soy Raúl Maldonado, Lorem ipsum dolor sit amet consectetur adipisicing
+              elit. Culpa
               commodi suntharum expedita incidunt magni ea. Illo nihil minima adipisci possimus numquam quam sint
               maiores officia
               voluptate, fugit non accusantium.</p>
@@ -215,8 +216,11 @@
               <img src="/assets/ricardo.jpeg" alt="Ricardo">
             </div>
             <h3 class="names-team mt-5">Ricardo González</h3>
-            <p class="description-team">Desarrollador Full Stack con formación en ingeniería, lo que me permite abordar proyectos de manera integral, trabajar en equipo de forma colaborativa y orientarme al cumplimiento de objetivos y metas en tiempos establecidos. He participado en diversos entornos de formación donde desarrollé proyectos tecnológicos, aplicando tanto habilidades técnicas como blandas. 
-</p>
+            <p class="description-team">Desarrollador Full Stack con formación en ingeniería, lo que me permite abordar
+              proyectos de manera integral, trabajar en equipo de forma colaborativa y orientarme al cumplimiento de
+              objetivos y metas en tiempos establecidos. He participado en diversos entornos de formación donde
+              desarrollé proyectos tecnológicos, aplicando tanto habilidades técnicas como blandas.
+            </p>
           </div>
           <div class="col-lg-4 col-md-12 col-xs-12 text-center">
             <div class="image-container-team">
