perfil Raúl Agregado

--- a/pages/acercaDe.html
+++ b/pages/acercaDe.html
@@ -201,15 +201,15 @@
         <div class="row justify-content-between gx-5">
           <div class="col-lg-4 col-md-12 col-xs-12 text-center">
             <div class="image-container-team">
-              <img src="/assets/raul.jpg" alt="Raúl">
+              <img src="/assets/raul.png" alt="Raúl">
             </div>
 
             <h3 class="names-team mt-5">Raúl Maldonado</h3>
-            <p class="description-team">Hola, soy Raúl Maldonado, Lorem ipsum dolor sit amet consectetur adipisicing
-              elit. Culpa
-              commodi suntharum expedita incidunt magni ea. Illo nihil minima adipisci possimus numquam quam sint
-              maiores officia
-              voluptate, fugit non accusantium.</p>
+            <p class="description-team">Desarrollador Java Fullstack Jr., apasionado por el desarrollo web y con
+              experiencia práctica en tecnologías como HTML, CSS, JavaScript, Bootstrap, Java y MySQL, entre otras. Me
+              caracterizo por mi compromiso, curiosidad constante y disposición para aprender. En cada proyecto busco
+              aportar soluciones de calidad, optimizando tanto la experiencia del usuario como la eficiencia del
+              desarrollo.</p>
           </div>
           <div class="col-lg-4 col-md-12 col-xs-12 text-center">
             <div class="image-container-team">
