--- a/pages/acercaDe.html
+++ b/pages/acercaDe.html
@@ -16,8 +16,8 @@
 <body>
   <!--Navbar-->
   <header>
-    <nav class="navbar navbar-expand-lg navbar-header">
-      <div class="container-fluid">
+    <nav class="navbar navbar-expand-md navbar-header">
+      <div class="container-fluid px-0">
         <!-- Logo alineado a la izquierda -->
         <a class="navbar-brand" href="#">
           <img class="logo-navbar" src="/assets/logo-blanco.png" alt="logo-blanco">
@@ -64,7 +64,7 @@
   <!--Sección nuestro manifiesto-->
   <section>
     <div class="container">
-      <div class="row justify-content-between gx-5">
+      <div class="row justify-content-between">
         <div class="col-lg-6 col-md-12 col-xs-12">
           <h2 class="our">Nuestro</h2>
           <h2 class="our-sub">Manifiesto</h2>
@@ -87,7 +87,7 @@
   <!--Sección Nuestra historia-->
   <section>
     <div class="container mt-5">
-      <div class="row justify-content-between gx-5">
+      <div class="row justify-content-between">
         <div class="col-lg-6 col-md-12 col-xs-12">
           <div class="image-container-aspect">
             <img src="/assets/ourstory.jpg" alt="nuestra historia" class="img-fluid img-aboutUs">
@@ -114,7 +114,7 @@
   </section>
   <!--Sección Misión y valores-->
   <div class="container mt-5">
-    <div class="row justify-content-between gx-5 align-items-baseline">
+    <div class="row justify-content-between align-items-baseline">
       <div class="col-lg-4 col-md-12 col-xs-12 text-center">
         <div class="image-container">
           <img src="/assets/mision.jpg" alt="misión" class="img-fluid img-aboutUs">
@@ -149,8 +149,8 @@
     <h2 class="aboutUs-team">Acerca del equipo de desarrollo</h2>
     <section>
       <div class="container">
-        <div class="row justify-content-between gx-5">
-          <div class="col-lg-4 col-md-12 col-xs-12 text-center">
+        <div class="row justify-content-between">
+          <div class="col-lg-4 col-md-12 col-xs-12 text-center px-5">
             <div class="image-container-team">
               <img src="/assets/alan.jpg" alt="Alan">
             </div>
@@ -162,11 +162,12 @@
               análisis de datos, y refinar mi manejo de software dedicado como SQL, Python y Power BI, ya que la gestión
               de información es una habilidad versátil e imprescindible en la toma de decisiones de muchos campos.
               Adicionalmente, actualmente me estoy desarrollando en un rol de desarrollador Java Fullstack.
-              https://github.com/AlanBWolfs
-              https://www.linkedin.com/in/alan-bañuelos-gonzález-b65906257/
-              alan_blk@live.com </p>
+            </p>
+            <a href="https://github.com/AlanBWolfs" target="_blank"><i class="fa-brands fa-github icons-team "></i></a>
+            <a href="https://www.linkedin.com/in/alan-bañuelos-gonzález-b65906257/
+              alan_blk@live.com" target="_blank"><i class="fa-brands fa-linkedin icons-team"></i></a>
           </div>
-          <div class="col-lg-4 col-md-12 col-xs-12 text-center">
+          <div class="col-lg-4 col-md-12 col-xs-12 text-center px-5">
             <div class="image-container-team">
               <img src="/assets/AKRC.jpg" alt="AKRC">
             </div>
@@ -180,8 +181,10 @@
               requerimientos, diseño de sistemas, pruebas y despliegue. Excelente capacidad para trabajar en equipo,
               resolver
               problemas y adaptarse a entornos ágiles.</p>
+            <a href="#" target="_blank"><i class="fa-brands fa-github icons-team "></i></a>
+            <a href="#" target="_blank"><i class="fa-brands fa-linkedin icons-team"></i></a>
           </div>
-          <div class="col-lg-4 col-md-12 col-xs-12 text-center">
+          <div class="col-lg-4 col-md-12 col-xs-12 text-center px-5">
             <div class="image-container-team">
               <img src="/assets/betza.jpeg" alt="Betzabet">
             </div>
@@ -193,13 +196,15 @@
               crecimiento constante, estoy comprometida con expandir mi expertise en diversoso ámbitos tecnológicos. Mi
               enfoque combina rigor técnico con adpatabilidad para dominar nuevos paradigmas y stacks tecnológicos según
               las demandas del proyecto.</p>
+            <a href="#" target="_blank"><i class="fa-brands fa-github icons-team "></i></a>
+            <a href="#" target="_blank"><i class="fa-brands fa-linkedin icons-team"></i></a>
           </div>
         </div>
       </div>
       <!--segunda parte-->
-      <div class="container mt-5">
-        <div class="row justify-content-between gx-5">
-          <div class="col-lg-4 col-md-12 col-xs-12 text-center">
+      <div class="container">
+        <div class="row justify-content-between">
+          <div class="col-lg-4 col-md-12 col-xs-12 text-center px-5">
             <div class="image-container-team">
               <img src="/assets/raul.png" alt="Raúl">
             </div>
@@ -210,8 +215,11 @@
               caracterizo por mi compromiso, curiosidad constante y disposición para aprender. En cada proyecto busco
               aportar soluciones de calidad, optimizando tanto la experiencia del usuario como la eficiencia del
               desarrollo.</p>
+            <a href="https://github.com/RaulMP30" target="_blank"><i class="fa-brands fa-github icons-team "></i></a>
+            <a href="https://www.linkedin.com/in/raúlmp" target="_blank"><i
+                class="fa-brands fa-linkedin icons-team"></i></a>
           </div>
-          <div class="col-lg-4 col-md-12 col-xs-12 text-center">
+          <div class="col-lg-4 col-md-12 col-xs-12 text-center px-5">
             <div class="image-container-team">
               <img src="/assets/ricardo.jpeg" alt="Ricardo">
             </div>
@@ -221,8 +229,10 @@
               objetivos y metas en tiempos establecidos. He participado en diversos entornos de formación donde
               desarrollé proyectos tecnológicos, aplicando tanto habilidades técnicas como blandas.
             </p>
+            <a href="#" target="_blank"><i class="fa-brands fa-github icons-team "></i></a>
+            <a href="#" target="_blank"><i class="fa-brands fa-linkedin icons-team"></i></a>
           </div>
-          <div class="col-lg-4 col-md-12 col-xs-12 text-center">
+          <div class="col-lg-4 col-md-12 col-xs-12 text-center px-5">
             <div class="image-container-team">
               <img src="/assets/Sergio.jpeg" alt="Sergio">
             </div>
@@ -232,20 +242,34 @@
               metodologías ágiles. Con más de 10 años de trayectoria en atención al cliente, roles administrativos y
               liderazgo de equipos, destaco por mi capacidad
               para adaptarme rápidamente, comunicarme de forma efectiva y entregar resultados en entornos exigentes.</p>
+            <a href="#" target="_blank"><i class="fa-brands fa-github icons-team "></i></a>
+            <a href="#" target="_blank"><i class="fa-brands fa-linkedin icons-team"></i></a>
           </div>
         </div>
       </div>
       <!--última parte-->
       <div class="container mt-5">
-        <div class="row justify-content-center gx-5">
-          <div class="col-lg-4 col-md-12 col-xs-12 text-center">
+        <div class="row justify-content-center">
+          <div class="col-lg-4 col-md-12 col-xs-12 text-center px-5">
             <div class="image-container-team">
               <img src="/assets/viviano (1).jpg" alt="Viviano">
             </div>
             <h3 class="names-team mt-5">Viviano Pérez</h3>
-            <p class="description-team">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea sit omnis quis velit
-              ex sed dolorem voluptatem fuga asperiores veniam quidem tenetur architecto praesentium, neque laudantium
-              aperiam expedita nam consectetur?</p>
+            <p class="description-team">Viviano Alonso Pérez Romero es Ingeniero en Electrónica y Telecomunicaciones
+              egresado de la Universidad Politécnica del Centro en Villahermosa, Tabasco. Cuenta con más de 6 años de
+              experiencia en infraestructura y administración de redes, voz y datos, trabajando en empresas del sector
+              privado y público.
+
+              Su labor se enfoca en la implementación y gestión de equipos de red y soluciones de ciberseguridad,
+              aportando en proyectos clave para ambas industrias. Ha participado activamente en levantamientos,
+              consultoría, proyección de costos de infraestructura y desarrollo de estrategias de seguridad informática.
+
+              Recientemente, culminó su Maestría en Tecnologías de la Información con especialidad en Administración de
+              Telecomunicaciones en el Instituto Tecnológico Nacional de México, campus Villahermosa. Entre sus logros
+              profesionales destaca su participación en proyectos relevantes, incluyendo congresos internacionales como
+              “Shallow and Deepwater México”</p>
+            <a href="#" target="_blank"><i class="fa-brands fa-github icons-team "></i></a>
+            <a href="#" target="_blank"><i class="fa-brands fa-linkedin icons-team"></i></a>
           </div>
         </div>
       </div>
@@ -257,8 +281,8 @@
 
 
   <footer class="aboutUs-footer">
-    <div class="container">
-      <div class="row text-center align-items-center justify-content-between gx-5">
+    <div class="container-fluid px-0">
+      <div class="row text-center align-items-center justify-content-between">
         <div class="col">
           <ul class="social-media-icons d-flex justify-content-center p-0 m-0">
             <li class="list-inline-item">
