--- a/pages/acercaDe.html
+++ b/pages/acercaDe.html
@@ -196,8 +196,9 @@
               crecimiento constante, estoy comprometida con expandir mi expertise en diversoso ámbitos tecnológicos. Mi
               enfoque combina rigor técnico con adpatabilidad para dominar nuevos paradigmas y stacks tecnológicos según
               las demandas del proyecto.</p>
-            <a href="#" target="_blank"><i class="fa-brands fa-github icons-team "></i></a>
-            <a href="#" target="_blank"><i class="fa-brands fa-linkedin icons-team"></i></a>
+            <a href="https://github.com/Betz15" target="_blank"><i class="fa-brands fa-github icons-team "></i></a>
+            <a href="https://www.linkedin.com/in/betzabet-del-carmen-mera-espinoza-210889359/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+              target="_blank"><i class="fa-brands fa-linkedin icons-team"></i></a>
           </div>
         </div>
       </div>
@@ -242,8 +243,9 @@
               metodologías ágiles. Con más de 10 años de trayectoria en atención al cliente, roles administrativos y
               liderazgo de equipos, destaco por mi capacidad
               para adaptarme rápidamente, comunicarme de forma efectiva y entregar resultados en entornos exigentes.</p>
-            <a href="#" target="_blank"><i class="fa-brands fa-github icons-team "></i></a>
-            <a href="#" target="_blank"><i class="fa-brands fa-linkedin icons-team"></i></a>
+            <a href="https://github.com/SergioML04" target="_blank"><i class="fa-brands fa-github icons-team "></i></a>
+            <a href="https://www.linkedin.com/in/sergio-morales-898a56307/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+              target="_blank"><i class="fa-brands fa-linkedin icons-team"></i></a>
           </div>
         </div>
       </div>
