--- a/pages/acercaDe.html
+++ b/pages/acercaDe.html
@@ -60,22 +60,22 @@
     </nav>
   </header>
 
-  <h1 class="aboutUs-title">Sobre Nosotros</h1>
+  <h1 class="main-title">Sobre Nosotros</h1>
   <!--Sección nuestro manifiesto-->
-  <section>
+  <section class="container-fluid">
     <div class="container">
       <div class="row justify-content-between">
-        <div class="col-lg-6 col-md-12 col-xs-12">
-          <h2 class="our">Nuestro</h2>
-          <h2 class="our-sub">Manifiesto</h2>
-          <p class="about-p">"Creemos en el poder del café como un vínculo que conecta personas, ideas y momentos. No
+        <div class="col-lg-6 col-md-12">
+          <h2 class="golden-sub">Nuestro</h2>
+          <h2 class="green-sub">Manifiesto</h2>
+          <p class="standard-p">"Creemos en el poder del café como un vínculo que conecta personas, ideas y momentos. No
             solo servimos bebidas, compartimos experiencias que inspiran, reconfortan y transforman el día a día.
             Apostamos por la autenticidad, la cercanía y el compromiso con la calidad en cada detalle. Somos una
             comunidad que valora la tradición cafetalera, pero que también mira al futuro con una visión innovadora y
             humana. Cada taza que preparamos lleva el propósito de generar impacto positivo y dejar huella en quienes la
             disfrutan."</p>
         </div>
-        <div class="col-lg-6 col-md-12 col-xs-12">
+        <div class="col-lg-6 col-md-12">
           <div class="image-container-aspect">
             <img src="/assets/aboutus.jpg" alt="nuestro manifiesto" class="img-fluid img-aboutUs">
           </div>
@@ -85,18 +85,19 @@
   </section>
 
   <!--Sección Nuestra historia-->
-  <section>
+  <section class="container-fluid">
     <div class="container mt-5">
       <div class="row justify-content-between">
-        <div class="col-lg-6 col-md-12 col-xs-12">
+        <div class="col-lg-6 order-2 order-md-1">
           <div class="image-container-aspect">
             <img src="/assets/ourstory.jpg" alt="nuestra historia" class="img-fluid img-aboutUs">
           </div>
         </div>
-        <div class="col-lg-6 col-md-12 col-xs-12">
-          <h2 class="our">Nuestra</h2>
-          <h2 class="our-sub">Historia</h2>
-          <p class="about-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur asperiores itaque totam
+        <div class="col-lg-6 order-1 order-md-2">
+          <h2 class="golden-sub">Nuestra</h2>
+          <h2 class="green-sub">Historia</h2>
+          <p class="standard-p text-justify lh-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
+            asperiores itaque totam
             provident et
             possimus quo aliquid labore, incidunt odit distinctio sint voluptates praesentium, optio aliquam commodi,
             nobis sed porro?Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed beatae distinctio eius
@@ -113,44 +114,49 @@
     </div>
   </section>
   <!--Sección Misión y valores-->
-  <div class="container mt-5">
-    <div class="row justify-content-between align-items-baseline">
-      <div class="col-lg-4 col-md-12 col-xs-12 text-center">
-        <div class="image-container">
-          <img src="/assets/mision.jpg" alt="misión" class="img-fluid img-aboutUs">
+  <section class="container-fluid">
+    <div class="container mt-5">
+      <div class="row justify-content-between align-items-baseline">
+        <div class="col-lg-4 col-md-12  mb-5 text-center">
+          <div class="image-container">
+            <img src="/assets/mision.jpg" alt="misión" class="img-fluid img-aboutUs">
+          </div>
+          <h2 class="green-sub mt-5">Misión</h2>
+          <p class="standard-p">"Brindar una experiencia excepcional a la comunidad universitaria a través de un
+            servicio
+            ágil, personalizado y de alta calidad, fusionando la tradición cafetalera con la innovación digital.
+            Facilitamos el acceso inmediato a nuestros productos tanto en tienda como a domicilio, y llevamos nuestro
+            sello artesanal a cada rincón del país mediante el envío de café empaquetado. Promovemos la cultura del buen
+            café en cada taza, conectando a las personas con sabores auténticos y momentos significativos."</p>
         </div>
-        <h2 class="our-sub mt-5">Misión</h2>
-        <p class="about-p">"Brindar una experiencia excepcional a la comunidad universitaria a través de un servicio
-          ágil, personalizado y de alta calidad, fusionando la tradición cafetalera con la innovación digital.
-          Facilitamos el acceso inmediato a nuestros productos tanto en tienda como a domicilio, y llevamos nuestro
-          sello artesanal a cada rincón del país mediante el envío de café empaquetado. Promovemos la cultura del buen
-          café en cada taza, conectando a las personas con sabores auténticos y momentos significativos."</p>
-      </div>
-      <div class="col-lg-4 col-md-12 col-xs-12 text-center">
-        <h2 class="our">Deja que el café</h2>
-        <h2 class="our-sub">nos conecte</h2>
-      </div>
-      <div class="col-lg-4 col-md-12 col-xs-12 text-center">
-        <div class="image-container">
-          <img src="/assets/valores.jpg" alt="valores" class="img-fluid img-aboutUs">
+        <div class="col-lg-4 col-md-12 mb-5 text-center">
+          <h2 class="golden-sub">Deja que el café</h2>
+          <h2 class="green-sub">nos conecte</h2>
         </div>
-        <h2 class="our-sub mt-5">Valores</h2>
-        <p class="about-p">"En Espresso Café, creemos en el poder del café para conectar a la comunidad universitaria.
-          Promovemos espacios de encuentro y beneficios que fortalecen esos vínculos, combinando tradición con
-          tecnología para resolver necesidades reales. Nos guía un compromiso constante con la mejora continua, la
-          empatía hacia nuestros clientes y la búsqueda de soluciones accesibles. La calidad es nuestro sello: desde la
-          atención hasta cada taza, cuidamos cada detalle para ofrecer una experiencia auténtica y significativa.""
-        </p>
+        <div class="col-lg-4 col-md-12 mb-5 text-center">
+          <div class="image-container">
+            <img src="/assets/valores.jpg" alt="valores" class="img-fluid img-aboutUs">
+          </div>
+          <h2 class="green-sub mt-5">Valores</h2>
+          <p class="standard-p">"En Espresso Café, creemos en el poder del café para conectar a la comunidad
+            universitaria.
+            Promovemos espacios de encuentro y beneficios que fortalecen esos vínculos, combinando tradición con
+            tecnología para resolver necesidades reales. Nos guía un compromiso constante con la mejora continua, la
+            empatía hacia nuestros clientes y la búsqueda de soluciones accesibles. La calidad es nuestro sello: desde
+            la
+            atención hasta cada taza, cuidamos cada detalle para ofrecer una experiencia auténtica y significativa.""
+          </p>
+        </div>
       </div>
     </div>
-  </div>
+  </section>
   <!--Sección de equipo-->
-  <section>
-    <h2 class="aboutUs-team">Acerca del equipo de desarrollo</h2>
-    <section>
+  <section class="container-fluid">
+    <h2 class="main-title">Acerca del equipo de desarrollo</h2>
+    <section class="container-fluid">
       <div class="container">
         <div class="row justify-content-between">
-          <div class="col-lg-4 col-md-12 col-xs-12 text-center px-5">
+          <div class="col-lg-4 col-md-12 text-center px-lg-5 px-3">
             <div class="image-container-team">
               <img src="/assets/alan.jpg" alt="Alan">
             </div>
@@ -167,7 +173,7 @@
             <a href="https://www.linkedin.com/in/alan-bañuelos-gonzález-b65906257/
               alan_blk@live.com" target="_blank"><i class="fa-brands fa-linkedin icons-team"></i></a>
           </div>
-          <div class="col-lg-4 col-md-12 col-xs-12 text-center px-5">
+          <div class="col-lg-4 col-md-12 text-center px-lg-5 px-3">
             <div class="image-container-team">
               <img src="/assets/AKRC.jpg" alt="AKRC">
             </div>
@@ -184,7 +190,7 @@
             <a href="#" target="_blank"><i class="fa-brands fa-github icons-team "></i></a>
             <a href="#" target="_blank"><i class="fa-brands fa-linkedin icons-team"></i></a>
           </div>
-          <div class="col-lg-4 col-md-12 col-xs-12 text-center px-5">
+          <div class="col-lg-4 col-md-12 text-center px-lg-5 px-3">
             <div class="image-container-team">
               <img src="/assets/betza.jpeg" alt="Betzabet">
             </div>
@@ -205,7 +211,7 @@
       <!--segunda parte-->
       <div class="container">
         <div class="row justify-content-between">
-          <div class="col-lg-4 col-md-12 col-xs-12 text-center px-5">
+          <div class="col-lg-4 col-md-12 text-center px-lg-5 px-3">
             <div class="image-container-team">
               <img src="/assets/raul.png" alt="Raúl">
             </div>
@@ -220,7 +226,7 @@
             <a href="https://www.linkedin.com/in/raúlmp" target="_blank"><i
                 class="fa-brands fa-linkedin icons-team"></i></a>
           </div>
-          <div class="col-lg-4 col-md-12 col-xs-12 text-center px-5">
+          <div class="col-lg-4 col-md-12 text-center px-lg-5 px-3">
             <div class="image-container-team">
               <img src="/assets/ricardo.jpeg" alt="Ricardo">
             </div>
@@ -233,7 +239,7 @@
             <a href="#" target="_blank"><i class="fa-brands fa-github icons-team "></i></a>
             <a href="#" target="_blank"><i class="fa-brands fa-linkedin icons-team"></i></a>
           </div>
-          <div class="col-lg-4 col-md-12 col-xs-12 text-center px-5">
+          <div class="col-lg-4 col-md-12 text-center px-lg-5 px-3">
             <div class="image-container-team">
               <img src="/assets/Sergio.jpeg" alt="Sergio">
             </div>
@@ -252,7 +258,7 @@
       <!--última parte-->
       <div class="container mt-5">
         <div class="row justify-content-center">
-          <div class="col-lg-4 col-md-12 col-xs-12 text-center px-5">
+          <div class="col-lg-4 col-md-12 text-center px-lg-5 px-3">
             <div class="image-container-team">
               <img src="/assets/viviano (1).jpg" alt="Viviano">
             </div>
@@ -282,7 +288,7 @@
 
 
 
-  <footer class="aboutUs-footer">
+  <footer class="general-footer">
     <div class="container-fluid px-0">
       <div class="row text-center align-items-center justify-content-between">
         <div class="col">
