--- a/pages/acercaDe.html
+++ b/pages/acercaDe.html
@@ -187,8 +187,10 @@
               requerimientos, diseño de sistemas, pruebas y despliegue. Excelente capacidad para trabajar en equipo,
               resolver
               problemas y adaptarse a entornos ágiles.</p>
-            <a href="#" target="_blank"><i class="fa-brands fa-github icons-team "></i></a>
-            <a href="#" target="_blank"><i class="fa-brands fa-linkedin icons-team"></i></a>
+            <a href="https://github.com/NolimitKarim" target="_blank"><i
+                class="fa-brands fa-github icons-team "></i></a>
+            <a href="https://www.linkedin.com/in/karimrangel/" target="_blank"><i
+                class="fa-brands fa-linkedin icons-team"></i></a>
           </div>
           <div class="col-lg-4 col-md-12 text-center px-lg-5 px-3">
             <div class="image-container-team">
