cambios nuestra historia

--- a/pages/acercaDe.html
+++ b/pages/acercaDe.html
@@ -68,12 +68,12 @@
         <div class="col-lg-6 col-md-12">
           <h2 class="golden-sub">Nuestro</h2>
           <h2 class="green-sub">Manifiesto</h2>
-          <p class="standard-p">"Creemos en el poder del café como un vínculo que conecta personas, ideas y momentos. No
+          <p class="standard-p">Creemos en el poder del café como un vínculo que conecta personas, ideas y momentos. No
             solo servimos bebidas, compartimos experiencias que inspiran, reconfortan y transforman el día a día.
             Apostamos por la autenticidad, la cercanía y el compromiso con la calidad en cada detalle. Somos una
             comunidad que valora la tradición cafetalera, pero que también mira al futuro con una visión innovadora y
             humana. Cada taza que preparamos lleva el propósito de generar impacto positivo y dejar huella en quienes la
-            disfrutan."</p>
+            disfrutan.</p>
         </div>
         <div class="col-lg-6 col-md-12">
           <div class="image-container-aspect">
@@ -96,18 +96,19 @@
         <div class="col-lg-6 order-1 order-md-2">
           <h2 class="golden-sub">Nuestra</h2>
           <h2 class="green-sub">Historia</h2>
-          <p class="standard-p text-justify lh-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
-            asperiores itaque totam
-            provident et
-            possimus quo aliquid labore, incidunt odit distinctio sint voluptates praesentium, optio aliquam commodi,
-            nobis sed porro?Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed beatae distinctio eius
-            corrupti, tempora quidem perferendis ut adipisci repellendus ab perspiciatis non consequuntur mollitia quasi
-            tempore, ipsa placeat expedita?.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur asperiores itaque totam provident et
-            possimus quo aliquid labore, incidunt odit distinctio sint voluptates praesentium, optio aliquam commodi,
-            nobis sed porro?Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed beatae distinctio eius
-            corrupti, tempora quidem perferendis ut adipisci repellendus ab perspiciatis non consequuntur mollitia quasi
-            tempore, ipsa placeat expedita?.
+          <p class="standard-p text-justify lh-lg">Espresso Café nace con la idea de crear un espacio donde el café no
+            solo se disfrute, sino que conecte. Inspirados por la energía, la creatividad y el ritmo de la vida
+            universitaria, decidimos establecer nuestra primera cafetería junto a la comunidad académica, con el
+            propósito de ofrecer mucho más que una bebida: una experiencia cercana, ágil y con identidad propia.
+
+            Desde el inicio, combinamos la tradición cafetalera con un enfoque innovador, integrando herramientas
+            digitales para facilitar pedidos, entregas y brindar una atención personalizada tanto en el local como a
+            domicilio. Nuestro compromiso es claro: ofrecer productos de calidad, crear momentos significativos y ser
+            parte del día a día de quienes nos rodean.
+
+            Lo que empezó como un proyecto para atender a estudiantes, docentes y personal universitario, hoy se
+            proyecta como una marca que quiere llegar a más rincones del país, llevando en cada taza nuestro sello
+            artesanal y el deseo de compartir la cultura del buen café.
           </p>
         </div>
       </div>
@@ -122,12 +123,12 @@
             <img src="/assets/mision.jpg" alt="misión" class="img-fluid img-aboutUs">
           </div>
           <h2 class="green-sub mt-5">Misión</h2>
-          <p class="standard-p">"Brindar una experiencia excepcional a la comunidad universitaria a través de un
+          <p class="standard-p">Brindar una experiencia excepcional a la comunidad universitaria a través de un
             servicio
             ágil, personalizado y de alta calidad, fusionando la tradición cafetalera con la innovación digital.
             Facilitamos el acceso inmediato a nuestros productos tanto en tienda como a domicilio, y llevamos nuestro
             sello artesanal a cada rincón del país mediante el envío de café empaquetado. Promovemos la cultura del buen
-            café en cada taza, conectando a las personas con sabores auténticos y momentos significativos."</p>
+            café en cada taza, conectando a las personas con sabores auténticos y momentos significativos.</p>
         </div>
         <div class="col-lg-4 col-md-12 mb-5 text-center">
           <h2 class="golden-sub">Deja que el café</h2>
@@ -138,13 +139,13 @@
             <img src="/assets/valores.jpg" alt="valores" class="img-fluid img-aboutUs">
           </div>
           <h2 class="green-sub mt-5">Valores</h2>
-          <p class="standard-p">"En Espresso Café, creemos en el poder del café para conectar a la comunidad
+          <p class="standard-p">En Espresso Café, creemos en el poder del café para conectar a la comunidad
             universitaria.
             Promovemos espacios de encuentro y beneficios que fortalecen esos vínculos, combinando tradición con
             tecnología para resolver necesidades reales. Nos guía un compromiso constante con la mejora continua, la
             empatía hacia nuestros clientes y la búsqueda de soluciones accesibles. La calidad es nuestro sello: desde
             la
-            atención hasta cada taza, cuidamos cada detalle para ofrecer una experiencia auténtica y significativa.""
+            atención hasta cada taza, cuidamos cada detalle para ofrecer una experiencia auténtica y significativa.
           </p>
         </div>
       </div>
