--- a/pages/contact.html
+++ b/pages/contact.html
@@ -65,22 +65,27 @@
 
     <!-- Contact Form -->
     <form>
+        <h2>Contáctanos</h2>
+        <br>
+        <h1>Ponte en Contacto</h1>
+        <div class="mb-3">
+            <label for="name" class="form-label">Nombre</label>
+            <input type="text" class="form-control" id="name" required>
+        </div>
         <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">Email address</label>
             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
         </div>
         <div class="mb-3">
-            <label for="exampleInputPassword1" class="form-label">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1">
+            <label for="text" class="form-label">Motivo</label>
+            <input type="text" class="form-control" id="text" required>
         </div>
-        <div class="mb-3 form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <label class="form-check-label" for="exampleCheck1">Check me out</label>
+        <div class="mb-3">
+            <label for="text" class="form-label">Mensaje</label>
+            <input type="text" class="form-control" id="text" required>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary">Enviar</button>
     </form>
-
 
     <!--Fin test -->
 
