--- a/pages/contact.html
+++ b/pages/contact.html
@@ -64,7 +64,7 @@
     <!-- test -->
 
     <!-- Contact Form -->
-    <div class="container">
+    <div class="container" id="contactForm">
         <div class="row justify-content-evenly">
             <div class="col-lg-4">
                 <form>
