sección derecha avance

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -91,8 +91,50 @@
                 </form>
             </div>
             <div class="col-lg-4">
-                <h1>Hola, Mundo</h1>
-                <img src="/assets/ourstory.jpg" alt="prueba">
+                <p class="standard-p text-center"><strong>En Espresso Café valoramos cada opinión.</strong></p>
+                <p class="standard-p text-center">Tu experiencia nos ayuda a mejorar, por eso te invitamos a
+                    contactarnos a través de nuestras redes
+                    sociales o mediante el formulario que encontrarás en esta página. ¡Estamos aquí para escucharte!</p>
+
+                <div class="row mt-4 contact-icons-grid">
+                    <div class="col-6 mb-4">
+                        <div class="d-flex flex-column align-items-center text-center">
+                            <i class="fa-brands fa-instagram contact-icon"></i>
+                            <p class="icon-label">Instagram</p>
+                            <a href="https://www.instagram.com/espressocafe10?igsh=MWRkemFhZ3R6MnQwMQ==" target="_blank"
+                                class="business-name">espressocafe10</a>
+                        </div>
+                    </div>
+                    <div class="col-6 mb-4">
+                        <div class="d-flex flex-column align-items-center text-center">
+                            <i class="fa-brands fa-facebook contact-icon"></i>
+                            <p class="icon-label">Facebook</p>
+                            <a href="https://www.facebook.com/profile.php?id=61576385543112" target="_blank"
+                                class="business-name">Espresso Café</a>
+                        </div>
+                    </div>
+                    <div class="col-6 mb-4">
+                        <div class="d-flex flex-column align-items-center text-center">
+                            <i class="fa-brands fa-whatsapp contact-icon"></i>
+                            <p class="icon-label">WhatsApp</p>
+                            <p class="business-name">+52 7712365116</p>
+                        </div>
+                    </div>
+                    <div class="col-6 mb-4">
+                        <div class="d-flex flex-column align-items-center text-center">
+                            <i class="fa-solid fa-location-dot contact-icon"></i>
+                            <p class="icon-label">Ubicación</p>
+                            <a href="https://maps.app.goo.gl/Ju8t6VKxvB513HP6A?g_st=iw" target="Ubicación"
+                                class="business-name">Espresso Café</a>
+                        </div>
+                    </div>
+                    <div class="col-12 map-container mb-5">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3804.854908849491!2d-93.113289!3d17.5144382!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85ec4d2c81b18b39%3A0xfb85acb60fe56b9f!2sEspresso%20cafe!5e0!3m2!1ses-419!2smx!4v1751432977626!5m2!1ses-419!2smx"
+                            width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade" class="map-espresso"></iframe>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
