--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    <title>Contáctanos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles.css">
@@ -19,7 +19,7 @@
         <nav class="navbar navbar-expand-md navbar-header">
             <div class="container-fluid px-0">
                 <!-- Logo alineado a la izquierda -->
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="/index.html">
                     <img class="logo-navbar" src="/assets/logo-blanco.png" alt="logo-blanco">
                 </a>
 
@@ -33,13 +33,13 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto align-items-center">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Menú</a>
+                            <a class="nav-link" href="menu.html">Menú</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Nosotros</a>
+                            <a class="nav-link" href="acercaDe.html">Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contáctanos</a>
+                            <a class="nav-link" href="contact.html">Contáctanos</a>
                         </li>
                         <div class="d-flex align-items-center">
                             <li class="nav-item">
@@ -52,7 +52,7 @@
                         </li>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><button type="button" class="btn-login">Login</button></a>
+                            <a class="nav-link" href="registro.html"><button type="button" class="btn-login">Inicia sesión</button></a>
                         </li>
                     </ul>
                 </div>
@@ -168,9 +168,9 @@
                 </div>
                 <div class="col">
                     <ul class="footer-menu d-flex justify-content-center p-0 m-0">
-                        <li class="list-inline-item"><a href="#">Menú</a></li>
-                        <li class="list-inline-item"><a href="#">Nosotros</a></li>
-                        <li class="list-inline-item"><a href="#">Contáctanos</a></li>
+                        <li class="list-inline-item"><a href="menu.html">Menú</a></li>
+                        <li class="list-inline-item"><a href="acercaDe.html">Nosotros</a></li>
+                        <li class="list-inline-item"><a href="contact.html">Contáctanos</a></li>
                     </ul>
                 </div>
             </div>
