--- a/index.html
+++ b/index.html
@@ -55,6 +55,15 @@
         </nav>
     </header>
 
+        <main>
+            <div>
+            <div class="mainBanner">
+                <div class="homeTitle">
+                <h1 class="home-main-title">Deja que el café nos conecte</h1>
+                </div>
+            </div>
+            </div>
+        </main>
 
 
     <footer class="general-footer">
