--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/styles-espresso-cafe/contact.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -52,7 +53,8 @@
                         </li>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="registro.html"><button type="button" class="btn-login">Inicia sesión</button></a>
+                            <a class="nav-link" href="registro.html"><button type="button" class="btn-login">Inicia
+                                    sesión</button></a>
                         </li>
                     </ul>
                 </div>
