--- a/pages/acercaDe.html
+++ b/pages/acercaDe.html
@@ -33,13 +33,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto align-items-center">
             <li class="nav-item">
-              <a class="nav-link" href="#">Menú</a>
+              <a class="nav-link" href="/pages/menu.html">Menú</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Nosotros</a>
+              <a class="nav-link" href="/pages/acercaDe.html">Nosotros</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contáctanos</a>
+              <a class="nav-link" href="/pages/contact.html">Contáctanos</a>
             </li>
             <div class="d-flex align-items-center">
               <li class="nav-item">
