--- a/pages/menu.html
+++ b/pages/menu.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title> Menu</title>
 </head>
 <body>
-    
+    <div id="navbar"></div>
+
+   <script src="../pages/menu.html"></script> 
 </body>
 </html>
