guardando cambios temporalmente

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <a href="pages/acercaDe.html">Nosotros</a>
     <a href="pages/contact.html">Contactanos</a>
+    <a href="pages/menu.html">Menu</a>
 </body>
 </html>
 
