--- a/pages/contact.html
+++ b/pages/contact.html
@@ -52,7 +52,8 @@
                         </li>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="registro.html"><button type="button" class="btn-login">Inicia sesión</button></a>
+                            <a class="nav-link" href="registro.html"><button type="button" class="btn-login">Inicia
+                                    sesión</button></a>
                         </li>
                     </ul>
                 </div>
@@ -68,15 +69,15 @@
         <div class="row justify-content-evenly">
             <div class="col-lg-4">
                 <form>
-                    <h2>Contáctanos</h2>
+                    <h2 class="green-sub">Contáctanos</h2>
                     <br>
-                    <h1>Ponte en Contacto</h1>
+                    <h1 class="green-sub">Ponte en Contacto</h1>
                     <div class="mb-3">
-                        <label for="name" class="form-label">Nombre</label>
+                        <label for="name" class="form-label, standard-p">Nombre</label>
                         <input type="text" class="form-control" id="name" required>
                     </div>
                     <div class="mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Email address</label>
+                        <label for="exampleInputEmail1" class="form-label">Email</label>
                         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                     </div>
                     <div class="mb-3">
@@ -84,10 +85,10 @@
                         <input type="text" class="form-control" id="text" required>
                     </div>
                     <div class="mb-3">
-                        <label for="text" class="form-label">Mensaje</label>
-                        <input type="text" class="form-control" id="text" required>
+                        <label for="textarea" class="form-label">Mensaje</label>
+                        <textarea type="textarea" class="form-control" id="textarea" required></textarea>
                     </div>
-                    <button type="submit" class="btn btn-primary">Enviar</button>
+                    <button type="submit" class="btn btn-primary" style="text-align: center;">Enviar</button>
                 </form>
             </div>
             <div class="col-lg-4">
