--- a/pages/acercaDe.html
+++ b/pages/acercaDe.html
@@ -15,9 +15,10 @@
 </head>
 
 <body>
-
-  <div id="navbar"></div>
-
+  <header>
+    <div id="navbar"></div>
+  </header>
+  
   <h1 class="main-title">Sobre Nosotros</h1>
   <!--Sección nuestro manifiesto-->
   <section class="container-fluid">
