--- a/pages/contact.html
+++ b/pages/contact.html
@@ -15,9 +15,9 @@
 </head>
 
 <body>
-    
+    <header>
     <div id="navbar"></div>
-
+    </header>
     <!-- test -->
 
     <!-- Contact Form -->
