--- a/pages/menu.html
+++ b/pages/menu.html
@@ -16,9 +16,10 @@
 </head>
 
 <body>
-
+    <header>
     <div id="navbar"></div>
-
+    </header>
+    
     <script src="../js/includeComponentes.js"></script>
 
 </body>
