ingrese los footer

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -97,44 +97,7 @@
 
     <!--Fin test -->
 
-
-    <!--Footer-->
-    <footer class="general-footer">
-        <div class="container-fluid px-0">
-            <div class="row text-center align-items-center justify-content-between">
-                <div class="col">
-                    <ul class="social-media-icons d-flex justify-content-center p-0 m-0">
-                        <li class="list-inline-item">
-                            <a href="https://web.whatsapp.com" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="https:/www.instagram.com" target="_blank"><i
-                                    class="fa-brands fa-instagram"></i></a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="https:/www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="https:/www.x.com" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col">
-                    <img src="/assets/logo-footer.png" alt="Logo footer" class="logo-footer">
-                </div>
-                <div class="col">
-                    <ul class="footer-menu d-flex justify-content-center p-0 m-0">
-                        <li class="list-inline-item"><a href="menu.html">Menú</a></li>
-                        <li class="list-inline-item"><a href="acercaDe.html">Nosotros</a></li>
-                        <li class="list-inline-item"><a href="contact.html">Contáctanos</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </footer>
-
-    <!--Fin de Footer-->
-
+    <div id="footer"></div>
     <script src="../js/includeComponentes.js"></script>
     <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous">
