--- a/pages/menu.html
+++ b/pages/menu.html
@@ -19,6 +19,8 @@
 
     <div id="navbar"></div>
 
+    
+    <div id="footer"></div>
     <script src="../js/includeComponentes.js"></script>
 
 </body>
